<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LCDW4 WiFi</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Enter</string>
    <string name="set_button">setting</string>
    <string name="Intro">LCDW4\nWiFi</string>
    <string name="IP1_Txtbutton"> No Device </string>
    <string name="IP2_Txtbutton"> No Device </string>
    <string name="IP3_Txtbutton"> No Device </string>
    <string name="IP4_Txtbutton"> No Device </string>
    <string name="IP5_Txtbutton"> No Device </string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_ctrl">CtrlActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="version_id"> Version 1.0 (LAN ONLY)</string>
    <string name="dialog_fire_missiles"> Fire missiles</string>
    <string name="fire"> fire</string>
    <string name="cancel"> Cancel</string>
    <string name="set">set</string>

</resources>